--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
           Aaron Marshall
           <div class="contact_info">
             <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          amarshall@jeemail.com
+          gluke@live.ca
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
           <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +13456764598
+          416-320-3497
 
         </div>
         </div>
@@ -43,7 +43,7 @@
             Hi, I'm Aaron Marshall! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
           </h1>
           <p>
-            I am a full stack software engineer with 10+ years of experience in both application and presentation layers.
+            I am a full stack software engineer with 11+ years of experience in both application and presentation layers.
             I have experience creating web applications, desktop applications, mobile applications and games.
           </p>
       </div>
@@ -58,7 +58,7 @@
         <div class="skill">
           <img src="html_finalprojimages/html5.png"/>
           <h6>HTML</h6>
-          <p>2 years experience</p>
+          <p>6 years experience</p>
         </div>  
 
         <div class="skill">
@@ -71,19 +71,19 @@
         <div class="skill">
             <img src="html_finalprojimages/CSS3.png"/>
             <h6>CSS</h6>
-            <p>4 years experience</p>
+            <p>6 years experience</p>
         </div>
 
         <div class="skill">
             <img src="html_finalprojimages/react.png"/>
-            <h6>React</h6>
-            <p>4 years experience</p>
+            <h6>SQL</h6>
+            <p>6 years experience</p>
         </div>
 
         <div class="skill">
             <img src="html_finalprojimages/java.png"/>
             <h6>Java</h6>
-            <p>4 years experience</p>
+            <p>6 years experience</p>
         </div>
 
       </div>
@@ -99,23 +99,19 @@
         <div id="projects-container" class="projects-container">
             <div class="project-card">
               <h3>Versapptility</h3>
-              <ul>
-                <li>Built a website that consists of a variety of useful web applications.</li>
-              </ul>
+              <p>Handled all of the work for versapptility.com including front end web design, back end programming, database design, database management and data entry for the rhyme word generator database. Versapptility.com is a website that consists of multiple web applications that can be used for free. PHP was used for most of the applications and some of them use JavaScript and MySQL.</p>
             </div>
             <hr>
             <div class="project-card">
               <h3>Hardai Games</h3>
-              <ul>
-                <li>Created 2 games called Projectile Fighter and Rainbow Meteor for my indie game company hardai games.</li>
-              </ul>
+              <p>Started an indie game company called Hardai Games. Created 2 games. Projectile Fighter and Rainbow Meteor. Both games received good feedback for the most part. Rainbow Meteor got over 5k downloads and Projectile Fighter got over 50k downloads in the Google Play Store. Handled all responsibilities for the creation of these games including programming, graphic design(2D pixel art), sound engineering and music composition.
+
+Created a website called hardaigames.com to showcase these games. The games are cross platform and can be played on PC/Desktop(Windows and Mac), Android and iOS. The tech stack used to create these games was Java and a framework called libGDX. Descriptions and trailer videos of the 2 games(Projectile Fighter and Rainbow Meteor) can be seen on the homepage of hardaigames.com.</p>
             </div>
             <hr>
             <div class="project-card">
               <h3>Complex Sentence Generator</h3>
-              <ul>
-                <li>Created a web application that paraphrases sentences using rarely used words/phrases.</li>
-              </ul>
+              <p>Handled all of the work for csgenerator.com including front end web design, back end programming, database design, database management and data entry for the complex sentence generator databases of 7 languages. Csgenerator.com consists of a software application called "Complex Sentence Generator". It can potentially paraphrase content by replacing simple and common words/phrases with more uncommon and rarely used words/phrases. It can generate random sentence examples and have them paraphrased. This software application mainly uses PHP and MySQL. Some JavaScript is used for copying and deleting text. I have also implemented a dictionary and thesaurus for csgenerator.com. Csgenerator.com has received a lot of good feedback over the years. Csgenerator.com is available in 7 languages(English, Spanish, Portuguese, French, Italian, German and Japanese).</p>
             </div>
         </div>
     </section>
