--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="html_finalprojimages/icon-4399701_1280.png" class="profile_image"/>
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQFfm19A-cKIow/profile-displayphoto-shrink_400_400/B56Za88VJoGoAg-/0/1746926654393?e=1758153600&v=beta&t=hqatAB3_iw4UpgxOIWxcOL2uEmLxCxFvO-cDB0TcR28" class="profile_image"/>
       </div>
 
       <div>
