--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- About Me -->
     <section id="about-me" class="container">
-      <div>
+      <div style="width: 200px; height: 200px">
         <img src="https://media.licdn.com/dms/image/v2/D5603AQFfm19A-cKIow/profile-displayphoto-shrink_400_400/B56Za88VJoGoAg-/0/1746926654393?e=1758153600&v=beta&t=hqatAB3_iw4UpgxOIWxcOL2uEmLxCxFvO-cDB0TcR28" class="profile_image"/>
       </div>
 
@@ -56,6 +56,18 @@
 
       <div class="all_skills">
         <div class="skill">
+            <img src="html_finalprojimages/java.png"/>
+            <h6>Java</h6>
+            <p>6 years experience</p>
+        </div>
+
+        <div class="skill">
+            <img src="html_finalprojimages/react.png"/>
+            <h6>SQL</h6>
+            <p>6 years experience</p>
+        </div>
+        
+        <div class="skill">
           <img src="html_finalprojimages/html5.png"/>
           <h6>HTML</h6>
           <p>6 years experience</p>
@@ -75,15 +87,18 @@
         </div>
 
         <div class="skill">
-            <img src="html_finalprojimages/react.png"/>
-            <h6>SQL</h6>
-            <p>6 years experience</p>
+            <h6>PHP</h6>
+            <p>4 years experience</p>
         </div>
 
         <div class="skill">
-            <img src="html_finalprojimages/java.png"/>
-            <h6>Java</h6>
-            <p>6 years experience</p>
+            <h6>C/C++</h6>
+            <p>4 years experience</p>
+        </div>
+
+        <div class="skill">
+            <h6>Python</h6>
+            <p>2 years experience</p>
         </div>
 
       </div>
@@ -116,48 +131,6 @@ Created a website called hardaigames.com to showcase these games. The games are 
         </div>
     </section>
     <div style="clear:both;"></div>
-
-    <!-- Recommendations -->
-    <section id="recommendations">
-      <h2>Recommendations</h2>
-      <div style="clear:both;"></div>
-      <div class="all_recommendations" id="all_recommendations">
-        <div class="recommendation">
-            <span>&#8220;</span>
-            Aaron has a strong understanding of fundamental software engineering concepts and is a continuous learner. 
-            he is very analytical, he thinks critically and has strong problem solving skills. 
-            <span>&#8221;</span>
-          </div>
-          <div class="recommendation">
-            <span>&#8220;</span>
-            I worked with Aaron for a long time and he consistently produced good results. 
-            I was also very impressed by his ability to adapt to unexpected situations by quickly coming up with strategies and solutions for them.
-            <span>&#8221;</span>
-          </div>
-          <div class="recommendation">
-            <span>&#8220;</span>
-            I am confident that Aaron would be a great asset to any company or client. In addition to his technical skills, he is a great leader. 
-            He has a positive attitude, he is charismatic and is able to raise to morale of the team.
-            <span>&#8221;</span>
-          </div>
-      </div>
-    </section>
-    <!-- Addition recommendation -->
-    <!-- Aaron is a certified full stack software engineer with a substantial amount of knowledge and experience pertaining to both front-end and back-end technologies and concepts. -->
-
-    <!-- Recommendation Form -->
-    <section id="contact">
-      <div class="flex_center">
-        <fieldset>
-          <legend class="introduction">Leave a Recommendation</legend>          
-          <input type="text" placeholder="Name (Optional)"> <br/>
-          <textarea id="new_recommendation" cols="500" rows="10" placeholder="Message"></textarea>
-          <div class="flex_center">
-            <button id="recommend_btn" onclick="addRecommendation()">Submit</button>
-          </div>
-        </fieldset>
-      </div>
-    </section>
 
     <div class="iconbutton">
       <a href="#home">
