--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
 
         <div id="projects-container" class="projects-container">
             <div class="project-card">
-              <h3>Versapptility</h3>
+              <h3><a href="https://www.versapptility.com">Versapptility</a></h3>
               <p>Handled all of the work for versapptility.com including front end web design, back end programming, database design, database management and data entry for the rhyme word generator database. Versapptility.com is a website that consists of multiple web applications that can be used for free. PHP was used for most of the applications and some of them use JavaScript and MySQL.</p>
             </div>
             <hr>
             <div class="project-card">
-              <h3>Hardai Games</h3>
+              <h3><a href="https://www.hardaigames.com">Hardai Games</a></h3>
               <p>Started an indie game company called Hardai Games. Created 2 games. Projectile Fighter and Rainbow Meteor. Both games received good feedback for the most part. Rainbow Meteor got over 5k downloads and Projectile Fighter got over 50k downloads in the Google Play Store. Handled all responsibilities for the creation of these games including programming, graphic design(2D pixel art), sound engineering and music composition.
 
 Created a website called hardaigames.com to showcase these games. The games are cross platform and can be played on PC/Desktop(Windows and Mac), Android and iOS. The tech stack used to create these games was Java and a framework called libGDX. Descriptions and trailer videos of the 2 games(Projectile Fighter and Rainbow Meteor) can be seen on the homepage of hardaigames.com.</p>
             </div>
             <hr>
             <div class="project-card">
-              <h3>Complex Sentence Generator</h3>
+              <h3><a href="https://www.csgenerator.com">Complex Sentence Generator</a></h3>
               <p>Handled all of the work for csgenerator.com including front end web design, back end programming, database design, database management and data entry for the complex sentence generator databases of 7 languages. Csgenerator.com consists of a software application called "Complex Sentence Generator". It can potentially paraphrase content by replacing simple and common words/phrases with more uncommon and rarely used words/phrases. It can generate random sentence examples and have them paraphrased. This software application mainly uses PHP and MySQL. Some JavaScript is used for copying and deleting text. I have also implemented a dictionary and thesaurus for csgenerator.com. Csgenerator.com has received a lot of good feedback over the years. Csgenerator.com is available in 7 languages(English, Spanish, Portuguese, French, Italian, German and Japanese).</p>
             </div>
         </div>
