--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <!-- About Me -->
     <section id="about-me" class="container">
-      <div style="width: 200px; height: 200px">
-        <img src="https://media.licdn.com/dms/image/v2/D5603AQFfm19A-cKIow/profile-displayphoto-shrink_400_400/B56Za88VJoGoAg-/0/1746926654393?e=1758153600&v=beta&t=hqatAB3_iw4UpgxOIWxcOL2uEmLxCxFvO-cDB0TcR28" class="profile_image"/>
+      <div>
+        <img width="50%" height="50%" src="https://media.licdn.com/dms/image/v2/D5603AQFfm19A-cKIow/profile-displayphoto-shrink_400_400/B56Za88VJoGoAg-/0/1746926654393?e=1758153600&v=beta&t=hqatAB3_iw4UpgxOIWxcOL2uEmLxCxFvO-cDB0TcR28" class="profile_image"/>
       </div>
 
       <div>
